popup base planilla

--- a/sistema/index.html
+++ b/sistema/index.html
@@ -9,6 +9,7 @@
      <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
      <link rel="stylesheet" href="../node_modules/angular-hotkeys/build/hotkeys.min.css">
      <link rel="stylesheet" href="../node_modules/ng-dialog/css/ngDialog.min.css">
+     <link rel="stylesheet" href="../node_modules/ng-dialog/css/ngDialog-theme-default.min.css">
      <link rel="stylesheet" href="../node_modules/angular-toastr/dist/angular-toastr.min.css">
      <!-- <link rel="stylesheet" href="../node_modules/css-grid/css/css-grid.min.css"> -->
      <link rel="stylesheet" href="../node_modules/angular-material/angular-material.css">
